appId: com.qazandoqafood
---
- launchApp
- tapOn:
    id: "email"
- assertVisible:
    id: "email"
- inputText: teste@teste.com
- tapOn:
    id: "password"
- assertVisible:
    id: "password"
- inputText: 123456
- tapOn: "ENTRAR"